[gd_scene load_steps=28 format=3 uid="uid://dywg1dlia21m4"]

[ext_resource type="Script" path="res://scenes/entities/player/player.gd" id="1_a2tdh"]
[ext_resource type="Resource" uid="uid://jdbuxjueoppv" path="res://resources/stats/player_stats.tres" id="2_hvpdv"]
[ext_resource type="Resource" uid="uid://ct0nm74ye6hvu" path="res://resources/inventory/player_inventory.tres" id="3_guvfk"]
[ext_resource type="Texture2D" uid="uid://c1hu4fyc15ksc" path="res://assets/entities/player/shadow.png" id="4_d8wdj"]
[ext_resource type="Material" uid="uid://c1hk8eir2wunl" path="res://shaders/HitFlashShader.tres" id="5_f5kij"]
[ext_resource type="Texture2D" uid="uid://c8o4n6pdcjsh0" path="res://assets/entities/player/player_legs.png" id="6_mhnbt"]
[ext_resource type="Texture2D" uid="uid://c2kgbta0kdgnu" path="res://assets/entities/player/player_body.png" id="7_wcyxa"]
[ext_resource type="Texture2D" uid="uid://tij6tessec61" path="res://assets/entities/player/player_head.png" id="8_trbrm"]
[ext_resource type="Texture2D" uid="uid://dfv380fsd06b3" path="res://assets/weapons/blue_crystal.png" id="9_4h1ff"]
[ext_resource type="PackedScene" uid="uid://cn74ssxkt4xuf" path="res://scenes/abilities/ability_manager/ability_manager.tscn" id="10_el3lh"]
[ext_resource type="PackedScene" uid="uid://i6cld88cc2u2" path="res://scenes/Managers/status_manager.tscn" id="11_l5sc5"]
[ext_resource type="PackedScene" uid="uid://bvvyfxv83le51" path="res://scenes/components/HurtBoxComponent/Hurtbox.tscn" id="12_ibgx5"]
[ext_resource type="PackedScene" uid="uid://4qv2wudjusch" path="res://scenes/components/HealthComponent/HealthComponent.tscn" id="13_fe0ip"]
[ext_resource type="PackedScene" uid="uid://7tmrpmqaxrih" path="res://scenes/components/ManaComponent/ManaComponent.tscn" id="14_x1bvg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wb5ct"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_17uwg"]
radius = 5.0
height = 18.0

[sub_resource type="Animation" id="Animation_1aq37"]
resource_name = "IDLE"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Leg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.35, 0.5, 0.65),
"transitions": PackedFloat32Array(0.3, 0.7, 1),
"update": 0,
"values": [Vector2(-1, -4), Vector2(-1, -3), Vector2(-1, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.35, 0.5, 0.65),
"transitions": PackedFloat32Array(0.3, 0.7, 1),
"update": 0,
"values": [Vector2(0, -13), Vector2(0, -12), Vector2(0, -13)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Leg:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.35, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -3), Vector2(0, -3)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/Body:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_umbld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Leg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Body:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -10)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/Leg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visuals/Shadow:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visuals/Body:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_jbv76"]
resource_name = "RUN"
length = 0.7
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Leg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.25, 0.35, 0.425, 0.5, 0.575),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Leg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.25, 0.35, 0.425, 0.5, 0.575),
"transitions": PackedFloat32Array(1, 0.5, 0.8, 0.6, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, -3), Vector2(0, -5), Vector2(0, -7), Vector2(0, -4), Vector2(0, -2), Vector2(0, -3), Vector2(0, -6)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Head:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.25, 0.35, 0.425, 0.5, 0.575),
"transitions": PackedFloat32Array(1, 0.5, 0.8, 0.6, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -14), Vector2(0, -13), Vector2(0, -15), Vector2(0, -17), Vector2(0, -14), Vector2(0, -12), Vector2(0, -13), Vector2(0, -16)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/Shadow:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15, 0.375),
"transitions": PackedFloat32Array(0.2, 2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visuals/Body:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.25, 0.35, 0.425, 0.5, 0.575),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 0, 1, 2, 3, 4, 5, 6]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visuals/Body:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.25, 0.35, 0.425, 0.5, 0.575),
"transitions": PackedFloat32Array(1, 0.5, 0.8, 0.6, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, -5), Vector2(-1, -4), Vector2(-1, -6), Vector2(-1, -8), Vector2(-1, -5), Vector2(-1, -3), Vector2(-1, -4), Vector2(-1, -7)]
}

[sub_resource type="Animation" id="Animation_3xpqm"]
resource_name = "STUN"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Leg:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Body:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Head:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bc3sj"]
_data = {
"IDLE": SubResource("Animation_1aq37"),
"RESET": SubResource("Animation_umbld"),
"RUN": SubResource("Animation_jbv76"),
"STUN": SubResource("Animation_3xpqm")
}

[sub_resource type="Animation" id="Animation_ls5fr"]
resource_name = "ATTACK_DOWN"
length = 0.25
step = 0.005
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_weapon"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/WeaponSlot/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.045, 0.05, 0.22),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 2.10348, 6.07404]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/WeaponSlot/Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.22),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, 1), Vector2(-3, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/WeaponSlot/Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/WeaponSlot/Weapon:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.03),
"transitions": PackedFloat32Array(274.374, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visuals/WeaponSlot/Weapon:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.015, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_kp2yq"]
resource_name = "ATTACK_DOWN_2"
length = 0.25
step = 0.025
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_weapon"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/WeaponSlot/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.07375, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/WeaponSlot/Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-3, 0), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/WeaponSlot/Weapon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.025, 0.0663344),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/WeaponSlot/Weapon:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_t563h"]
resource_name = "ATTACK_UP"
length = 0.25
step = 0.005
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide_weapon"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/WeaponSlot/Weapon:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.25817, 8.5305]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/WeaponSlot/Weapon:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.105, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-4, 0), Vector2(-2, -1), Vector2(4.76837e-07, 1.19209e-07)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/WeaponSlot/Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/WeaponSlot/Weapon:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(274.374, 274.374),
"update": 1,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visuals/WeaponSlot/Weapon:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_sk3rh"]
resource_name = "HIDE_WEAPON"
length = 1.5

[sub_resource type="Animation" id="Animation_ca0u8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/WeaponSlot/Weapon:z_index")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/WeaponSlot/Weapon:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/WeaponSlot/Weapon:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-6.28319]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/WeaponSlot/Weapon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/WeaponSlot/Weapon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_poquf"]
_data = {
"ATTACK_DOWN": SubResource("Animation_ls5fr"),
"ATTACK_DOWN_2": SubResource("Animation_kp2yq"),
"ATTACK_UP": SubResource("Animation_t563h"),
"HIDE_WEAPON": SubResource("Animation_sk3rh"),
"RESET": SubResource("Animation_ca0u8")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 2
collision_mask = 17
motion_mode = 1
script = ExtResource("1_a2tdh")
stats = ExtResource("2_hvpdv")
player_inventory = ExtResource("3_guvfk")

[node name="Visuals" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -3)
texture = ExtResource("4_d8wdj")

[node name="Leg" type="Sprite2D" parent="Visuals"]
material = ExtResource("5_f5kij")
texture = ExtResource("6_mhnbt")
hframes = 8

[node name="Body" type="Sprite2D" parent="Visuals"]
material = ExtResource("5_f5kij")
position = Vector2(-1, -1)
texture = ExtResource("7_wcyxa")
hframes = 8

[node name="Head" type="Sprite2D" parent="Visuals"]
material = ExtResource("5_f5kij")
position = Vector2(0, -10)
texture = ExtResource("8_trbrm")
hframes = 2
frame = 1

[node name="WeaponSlot" type="Node2D" parent="Visuals"]
visible = false
z_index = -2
position = Vector2(2, -2)

[node name="Weapon" type="Sprite2D" parent="Visuals/WeaponSlot"]
z_index = 2
rotation = -6.28319
texture = ExtResource("9_4h1ff")
offset = Vector2(5, -4)

[node name="CollisionPlayer" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_wb5ct")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="-----MANAGERS----------" type="Node" parent="."]

[node name="AbilityManager" parent="." instance=ExtResource("10_el3lh")]

[node name="StatusManager" parent="." instance=ExtResource("11_l5sc5")]

[node name="----COMPONENTS-------" type="Node" parent="."]

[node name="HurtBoxComponent" parent="." instance=ExtResource("12_ibgx5")]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(-0.5, -8)
shape = SubResource("CapsuleShape2D_17uwg")

[node name="HealthComponent" parent="." instance=ExtResource("13_fe0ip")]

[node name="ManaComponent" parent="." instance=ExtResource("14_x1bvg")]

[node name="----ANIMATIONS---------" type="Node" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bc3sj")
}
speed_scale = 0.8

[node name="AttackAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_poquf")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
